# Machine-Learning-projects

./: .gitignore  README.md  main.py  pyproject.toml
Brain-Tumor-prediction/: Brain_Tumor_Predicition.ipynb
Car Price Predicition/: Car Price Prediction.ipynb
