[project]
name = "brain-tumor-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
    "xgboost>=3.2.0",
]
